--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 
         div {
             background-color: rgb(42, 42, 42);
-            color: white;
+            color: rgb(255, 255, 255);
             padding: 30px;
             width: 80%;
             margin: auto;
