--- a/blog.html
+++ b/blog.html
@@ -74,7 +74,7 @@
             Java.</p>
     </div>
     <div>
-        <P class="questions">***4.Why we can get undifined?</P>
+        <P class="questions">4.Why can we get undifined?</P>
         <p>A variable that has not been assigned a value is of type undefined. A method or statement also returns
             undefined if the variable that is being evaluated does not have an assigned value. A function returns
             undefined if a value was not returned. </p>
