--- a/blog.html
+++ b/blog.html
@@ -77,7 +77,9 @@
         <P class="questions">4.Why can we get undifined?</P>
         <p>A variable that has not been assigned a value is of type undefined. A method or statement also returns
             undefined if the variable that is being evaluated does not have an assigned value. A function returns
-            undefined if a value was not returned. </p>
+            undefined if a value was not returned.
+            The standard clearly defines that you will receive undefined when accessing uninitialized variables,
+            non-existing object properties, non-existing array elements, and alike. </p>
     </div>
 
 </body>
