--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,8 @@
             undefined if the variable that is being evaluated does not have an assigned value. A function returns
             undefined if a value was not returned.
             The standard clearly defines that you will receive undefined when accessing uninitialized variables,
-            non-existing object properties, non-existing array elements, and alike. </p>
+            non-existing object properties, non-existing array elements, and alike.. A function can also be undefined
+            when it doesn't have the value returned </p>
     </div>
 
 </body>
