--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,8 @@
             particular tab in the browser, a unique page session gets created and assigned to that particular tab
 
             The difference between localStorage and sessionStorage has to do with lifetime and scope: how long the data
-            is saved for and who the data is accessible to. Session storage is destroyed once the user closes the
+            is saved for and who the data is accessible to. Session storage is all function destroyed once the user
+            closes the
             browser whereas, Local storage stores data with no expiration date.</p>
     </div>
     <div>
@@ -80,7 +81,7 @@
             undefined if a value was not returned.
             The standard clearly defines that you will receive undefined when accessing uninitialized variables,
             non-existing object properties, non-existing array elements, and alike.. A function can also be undefined
-            when it doesn't have the value returned </p>
+            when it doesn't have the value returned it works </p>
     </div>
 
 </body>
